--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-  - source: /index.html
-    destination: /var/www/html/
+  - source: /app/lpcms/
+    destination: /home/bitnami/stack/drupal
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
