--- a/appspec.yml
+++ b/appspec.yml
@@ -1,18 +1,20 @@
 version: 0.0
 os: linux
 files:
-  - source: /app/drupal
-    destination: /home/bitnami/stack/drupal
-# hooks:
-#   BeforeInstall:
-#     # - location: scripts/install_dependencies
-#     #   timeout: 300
-#     #   runas: root
-#     - location: scripts/start_server
-#       timeout: 300
-#       runas: root
-#   ApplicationStop:
-#     - location: scripts/stop_server
-#       timeout: 300
-#       runas: root
+  - source: /app/drupal/
+    destination: /home/bitnami/stack/drupal/
+hooks:
+  BeforeInstall:
+    - location: scripts/rmoldsite.sh
+      timeout: 120
+    # - location: scripts/install_dependencies
+    #   timeout: 300
+      runas: root
+    - location: scripts/start_server
+      timeout: 300
+      runas: root
+  ApplicationStop:
+    - location: scripts/stop_server
+      timeout: 300
+      runas: root
 
