--- a/appspec.yml
+++ b/appspec.yml
@@ -7,9 +7,10 @@ hooks:
   BeforeInstall:
     - location: scripts/rmoldsite.sh
       timeout: 120
+      runas: root
     # - location: scripts/install_dependencies
     #   timeout: 300
-      runas: root
+    #  runas: root
     - location: scripts/start_server
       timeout: 300
       runas: root
