--- a/appspec.yml
+++ b/appspec.yml
@@ -7,9 +7,9 @@ files:
 
 hooks:
   BeforeInstall:
-    - location: scripts/rmoldsite.sh
-      timeout: 300
-      runas: root
+    # - location: scripts/rmoldsite.sh
+    #   timeout: 300
+    #   runas: root
     # - location: scripts/install_dependencies
     #   timeout: 300
     #  runas: root
