--- a/appspec.yml
+++ b/appspec.yml
@@ -7,11 +7,11 @@ files:
 
 hooks:
   BeforeInstall:
-    # - location: scripts/rmoldsite.sh
-    #   timeout: 300
-    #   runas: root
-    # - location: scripts/install_dependencies
-    #   timeout: 300
+    - location: scripts/rmoldsite.sh
+      timeout: 300
+      runas: root
+    - location: scripts/install_dependencies
+      timeout: 300
     #  runas: root
     - location: scripts/start_server
       timeout: 300
